모달 닫기 및 목록 새로고침 기능 추가

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,10 @@
             "mainClass": "com.uixs.UixsBootApplication",
             "projectName": "uixs_boot_mongo",
             "args": "",
-            // 환경변수 파일 (필요시 .env 파일 생성)
+            // .env 파일에서 환경변수 로드 (Git에서 제외됨)
+            // .env 파일이 없으면 시스템 환경변수 사용
             "envFile": "${workspaceFolder}/.env",
-            // JVM 옵션 (메모리 설정 등)
+            // JVM 옵션
             "vmArgs": "-Dspring.profiles.active=default"
         },
         {
