--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,11 @@ build/
 
 ### VS Code ###
 #.vscode/
+
+### 환경변수 파일 (민감 정보 보호) ###
+.env
+.env.local
+.env.*.local
+
+### 설정 파일 (민감 정보 포함) ###
+src/main/resources/application.properties
